[package]
name = "sqler"
version = "0.0.1-beta"
authors = ["Marwan Hilal"]
repository = "https://github.com/infinite-dev-void/sqler"
edition = "2021"
description = "This crate provides a way for writing SQL queries using some of Rust syntax"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqler_macros = "0.0.1-beta"